--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hostelbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "engines": {
     "node": "18.12.1"
