--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@joi/date": "^2.1.0",
     "@netlify/functions": "^1.6.0",
     "@types/express": "^4.17.17",
+    "aws-sdk": "^2.1392.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -37,6 +38,7 @@
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
     "serverless-http": "^3.2.0",
-    "tedious": "^15.1.2"
+    "tedious": "^15.1.2",
+    "uuid": "^9.0.0"
   }
 }
